--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>devops-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>demologin-app</name>
+  <name>devops-app</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -86,7 +86,7 @@
             <properties>
                 <!-- Optional URL to server. Default value is http://localhost:9000 -->
                 <sonar.host.url>
-                  http://192.168.14.131:9000
+                  http://192.168.14.132:9000/
                 </sonar.host.url>
             </properties>
         </profile>
